clean the repo code

--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
-    "clientID": "ZJ4fKRtUNWuWHmRS2q9VK7TfGFga",
+    "clientID": "",
     "baseUrl": "https://localhost:9443",
     "signInRedirectURL": "https://localhost:3000",
     "signOutRedirectURL": "https://localhost:3000",
-    "scope": ["profile"],
+    "scope": [ "profile" ],
     "resourceServerURLs": [ "http://localhost:5001/booking-creation" ]
 }
